[package]
name = "crunch-app"
version = "0.0.3"
edition = "2021"
description = "Turbocharge your Rust workflow with crunch"
license = "MIT"

[dependencies]
cargo_metadata = "0.8.0"
log = "0.4.1"
xdg = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.21", default-features = true, features = ["derive"] }

[[bin]]
name = "crunch"
path = "src/main.rs"
